# furpberry

./: Makefile  README.md  dev-requirements.txt  furby.service  pyproject.toml  requirements.txt  start_furby.sh
debug/: test_chromecast.py  test_displays.py  test_displays_basic.py  test_light_sensor.py  test_motor.py  test_motor_pins.py
src/furpberry/: main.py
src/furpberry/util/: display.py  google_home.py  light_sensor.py  logger.py  motor.py  pins.py
